integration/tests/error_query_invalid_utf8.err
error: Invalid Decoding
  --> tests/error_query_invalid_utf8.hurl:4:1
   |
 4 | jsonpath "$.errors" countEquals 2
   | ^^^^^^^^^^^^^^^^^^^ The body can not be decoded with charset 'utf-8'
   |

